fixed z-index issue for search bar

--- a/src/components/search/searchResults.css
+++ b/src/components/search/searchResults.css
@@ -10,6 +10,7 @@
     bottom: 0;
     transform: translateY(calc(100% + 4px));
     overflow: auto;
+    z-index: 22;
     max-height: 250px;
     & ul{
         max-height: 200px;
